feat: Added global refunds list with service/integration/request specs. configured cors
