# app/controllers/api/v1/refunds_controller.rb
@@ -1,40 +1,13 @@
 class Api::V1::RefundsController < ApplicationController
-  wrap_parameters false
-
-  rescue_from RefundError::ValidationFailed do |e|
-    render json: { error: e.message }, status: :unprocessable_content
-  end
-
-  rescue_from RefundError::AmountExceedsRefundable do |e|
-    render json: { error: e.message }, status: :unprocessable_content
-  end
-
-  rescue_from RefundError::PaymentNotSucceeded do |e|
-    render json: { error: e.message }, status: :unprocessable_content
-  end
-
-  rescue_from RefundError::PaymentAlreadyRefunded do |e|
-    render json: { error: e.message }, status: :unprocessable_content
-  end
-
   def index
-    transaction = Payments::FindService.call(current_merchant, params[:payment_uid]).transaction
-    result = Refunds::ListService.call(transaction)
+    result = Refunds::ListService.call(current_merchant, **list_params)
 
-    render json: { refunds: result.refunds }, status: result.status
-  end
-
-  def create
-    params.require([ :amount ])
-
-    transaction = Payments::FindService.call(current_merchant, params[:payment_uid]).transaction
-    result = Refunds::CreateService.call(transaction, refund_params)
-
-    render json: result.refund, status: result.status
+    render json: { refunds: result.refunds, next_cursor: result.next_cursor }, status: result.status
   end
 
   private
-  def refund_params
-    params.permit(:amount)
+
+  def list_params
+    params.permit(:cursor, :status, :limit).to_h.symbolize_keys
   end
 end
